$Id: ChangeLog,v 1.80 2004/06/24 14:46:55 freckle Exp $


2004-06-24  Matthias Ringwald <mringwal@inf.ethz.ch>

    * dev/unix_devs.c: if using STDIO, better read from
    STDIN instead of STDOUT => unix piping works
    
2004-06-23  Ole Reinhardt <ole.reinhardt@kernelconcept.de>
    * dev/can_dev.c, include/dev/can_dev.h:
    Added functions for buffer monitoring (avail / free)

2004-06-21  Matthias Ringwald <mringwal@inf.ethz.ch>

    * dev/unix_devs.c: multiple parallel reads now work.
    But still dead-locks possible.
    Non-blocking stdio.

2004-06-21  Matthias Ringwald <mringwal@inf.ethz.ch>

   * os/arch/unix_nutinit.c: idle thread now sleeps until
    the next (virtual) IRQ occures

2004-06-21  Matthias Ringwald <mringwal@inf.ethz.ch>

    * dev/unix_devs.c: read operation is using extra pthread
      to only block current thread (instead of all threads)

2004-06-21  Matthias Ringwald <mringwal@inf.ethz.ch>

    * include/dev/usart.h|uart.h: added device definitions for
      *nix emulation

2004-06-08  Matthias Ringwald <mringwal@inf.ethz.ch>

    * include/sys/types.h: changed #include "types_orig.h" to
    <sys/types_orig.h> to allow this file to be in $MODDIR

2004-06-07  Harald Kipp  <harald.kipp@egnite.de>

	* conf: Still incomplete configuration scripts added.

	* tools/nutconf: Working configuration tool replaced by very
	incomplete re-design. It will read the Lua scripts from the
	conf directory and display an editable tree of configuration
	items.


2004-06-07  Ole Reinhardt  <ole.reinhardt@kernelconcepts.de>
	* dev/sja1000.c, dev/can_dev.c
	  include/dev/sja1000.h, include/dev/can_dev.h
	
	Initial checkin of a driver and a simple api for can-bus devices.
	This driver is for the well known phillips sja1000 wich is connected
	to the Memory bus and an external interrupt.

2004-06-02  Ole Reinhardt  <ole.reinhardt@kernelconcepts.de>
	* os/semaphore.c
	Changed NutEventWait to NutEventWaitNext according to a hint 
	from Oliver
